modules/s3backend/new-pac-man/charts/pac-man/pac-man-ingress.yml
apiVersion: network.k8s.io/v1
kind: Ingress
metadata:
  name: pacman
  annotations:
    cert-manager.io/cluster-issuer: "zerossl"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: "contour"
  namespace: my-app
spec:
  tls:
  - hosts:
    - pacman.test1.amazon.com
    secretName: pacman.test2.amazon.com
  rules:
  - host: pacman.test.amazon.com
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: pacman
              port:
                number: 80
